libs/@local/hashql/eval/tests/ui/graph/read/entity/computed-path-indexing-error.jsonc
//@ run: fail
//@ description: Test error when using computed paths for indexing in filter expressions
// biome-ignore format: readability
["::core::graph::tail::collect",
  ["::core::graph::body::filter",
    ["::core::graph::head::entities", ["::core::graph::tmp::decision_time_now"]],
    ["fn", { "#tuple": [] }, { "#struct": { "vertex": "_" } }, "_",
      ["==",
        {"#literal": 2},
        ["[]",
          ["input", "user_ids", "Dict<::core::graph::types::knowledge::entity::EntityUuid, Integer>"],
          "vertex.id.entity_id.entity_uuid"
          //~^ ERROR Cannot use computed value as index
        ]
      ]
    ]
  ]
]
